@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,18 +18,22 @@ package com.hazelcast.jet.hadoop.file;
 
 import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.core.io.JsonEOFException;
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.jet.hadoop.file.model.User;
 import com.hazelcast.jet.pipeline.file.FileFormat;
 import com.hazelcast.jet.pipeline.file.FileSourceBuilder;
 import com.hazelcast.jet.pipeline.file.FileSources;
+import com.hazelcast.jet.test.IgnoreInJenkinsOnWindows;
+import com.hazelcast.test.annotation.NightlyTest;
+import com.hazelcast.test.annotation.ParallelJVMTest;
 import org.junit.Test;
+import org.junit.experimental.categories.Category;
 
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assumptions.assumeThat;
 
+@Category({NightlyTest.class, ParallelJVMTest.class, IgnoreInJenkinsOnWindows.class})
 public class JsonFileFormatTest extends BaseFileFormatTest {
 
     @Test
@@ -41,11 +45,11 @@ public class JsonFileFormatTest extends BaseFileFormatTest {
         assertItemsInSource(source,
                 collected -> assertThat(collected).usingRecursiveFieldByFieldElementComparator()
                                                   .containsOnly(
-                                                          ImmutableMap.of(
+                                                          Map.of(
                                                                   "name", "Frantisek",
                                                                   "favoriteNumber", 7
                                                           ),
-                                                          ImmutableMap.of(
+                                                          Map.of(
                                                                   "name", "Ali",
                                                                   "favoriteNumber", 42
                                                           )
