@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package com.hazelcast.jet.sql.impl.connector.jdbc;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.config.Config;
 import com.hazelcast.config.DataConnectionConfig;
 import com.hazelcast.core.HazelcastInstance;
@@ -27,7 +25,9 @@ import com.hazelcast.sql.SqlColumnMetadata;
 import com.hazelcast.sql.SqlResult;
 import com.hazelcast.sql.SqlRow;
 import com.hazelcast.sql.SqlRowMetadata;
+import com.hazelcast.test.Accessors;
 import com.hazelcast.test.jdbc.H2DatabaseProvider;
+import com.hazelcast.test.jdbc.JdbcObjectProvider;
 import com.hazelcast.test.jdbc.MySQLDatabaseProvider;
 import com.hazelcast.test.jdbc.PostgresDatabaseProvider;
 import org.junit.Before;
@@ -85,8 +85,10 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
 
     @Test
     public void createMappingWithExternalSchemaAndTableName() throws Exception {
-        executeJdbc("CREATE SCHEMA schema1");
-        createTable("schema1." + tableName);
+        assumeThat(recordProvider).isInstanceOf(JdbcObjectProvider.class);
+        String schemaName = "schema1";
+        executeJdbc(((JdbcObjectProvider) recordProvider).createSchemaQuery(schemaName));
+        createTableNoQuote(quote(schemaName, tableName));
 
         String mappingName = "mapping_" + randomName();
         createMapping("\"schema1\".\"" + tableName + '\"', mappingName);
@@ -104,12 +106,12 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                 "DATA CONNECTION \"testDatabaseRef\"" + LE +
                 "OBJECT TYPE \"Table\"";
         assertRowsAnyOrder("SELECT GET_DDL('relation', '" + mappingName + "')",
-                ImmutableList.of(new Row(expectedMappingQuery)));
+                List.of(new Row(expectedMappingQuery)));
     }
 
     @Test
     public void createMappingWithExternalTableNameTooManyComponents() throws Exception {
-        createTable(tableName);
+        createTable(tableName); // TODO this line can be removed?
 
         assertThatThrownBy(() ->
                 execute("CREATE MAPPING " + tableName
@@ -126,7 +128,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
 
     @Test
     public void createMappingWithExternalTableNameTooManyComponentsNoQuotes() throws Exception {
-        createTable(tableName);
+        createTable(tableName); // TODO this line can be removed?
 
         assertThatThrownBy(() ->
                 execute("CREATE MAPPING " + tableName
@@ -237,7 +239,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         try (Connection conn = DriverManager.getConnection(dbConnectionUrl);
              Statement stmt = conn.createStatement()
         ) {
-            stmt.execute("CREATE TABLE " + tableName + " (id INT PRIMARY KEY, name VARCHAR(10))");
+            stmt.execute("CREATE TABLE " + quote(tableName) + " (" + quote("id") + " INT PRIMARY KEY, " + quote("name") + " VARCHAR(10))");
         }
 
         assertThatThrownBy(() ->
@@ -269,7 +271,8 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                         + "DATA CONNECTION " + TEST_DATABASE_REF
                 )
         ).isInstanceOf(HazelcastSqlException.class)
-                .hasMessageContaining("Type BOOLEAN of field id does not match db type INTEGER");
+                // Oracle converts INT to DECIMAL, doesn't really matter, it is still not convertible
+                .hasMessageMatching("Type BOOLEAN of field id does not match db type (INTEGER|DECIMAL)");
 
         assertRowsAnyOrder("SHOW MAPPINGS",
                 emptyList()
@@ -278,8 +281,9 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
 
     @Test
     public void when_createMappingWithImplicitFieldTypesDefinition_then_orderIsPreserved() throws Exception {
-        createTable(tableName);
-        insertItems(tableName, 2);
+        createTable(tableName, "id VARCHAR(10) PRIMARY KEY", "name VARCHAR(100)");
+        executeJdbc("INSERT INTO " + quote(tableName) + " VALUES('0', 'name-0')");
+        executeJdbc("INSERT INTO " + quote(tableName) + " VALUES('1', 'name-1')");
 
         execute("CREATE MAPPING " + tableName
                 + " DATA CONNECTION " + TEST_DATABASE_REF
@@ -288,7 +292,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         // If you change LinkedHashMap -> HashMap at JdbcSqlConnector:159, it will fail.
         assertRowsAnyOrder(
                 "SELECT * FROM " + tableName,
-                asList(new Row(0, "name-0"), new Row(1, "name-1"))
+                asList(new Row("0", "name-0"), new Row("1", "name-1"))
         );
     }
 
@@ -302,7 +306,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         options.put("jdbcUrl", dbConnectionUrl);
 
         createDataConnection(instance(), dcName, "JDBC", false, options);
-        InternalDataConnectionService dlService = getNodeEngineImpl(instance()).getDataConnectionService();
+        InternalDataConnectionService dlService = Accessors.getNodeEngineImpl(instance()).getDataConnectionService();
         assertThat(dlService.existsSqlDataConnection(dcName)).isTrue();
 
         createJdbcMappingUsingDataConnection(name, dcName);
@@ -320,7 +324,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
     }
 
     /**
-     * Source : <a href=https://github.com/hazelcast/hazelcast/issues/24337">issue #24337</a>.
+     * Source : <a href="https://github.com/hazelcast/hazelcast/issues/24337">issue #24337</a>.
      */
     @Test
     public void given_mappingIsDeclaredWithDataConn_when_DataConnWasRemoved_then_success() throws Exception {
@@ -338,7 +342,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
 
         // then
         List<Row> showDataConnections = allRows("SHOW DATA CONNECTIONS ", sqlService);
-        Row expectedConnection = new Row(TEST_DATABASE_REF, "jdbc", jsonArray("Table"));
+        Row expectedConnection = new Row(TEST_DATABASE_REF, "Jdbc", jsonArray("Table"));
         assertThat(showDataConnections).contains(expectedConnection);
 
         // Ensure that engine is not broken after Data Connection removal with some unrelated query.
@@ -374,7 +378,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                         "public",
                         mappingName,
                         '"' + mappingName + '"',
-                        "kafka",
+                        "Kafka",
                         "{}")));
 
         // cleanup
@@ -423,17 +427,13 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
 
         // when
         sqlService.executeUpdate("DROP DATA CONNECTION " + dcName);
-        createDataConnection(instance(), dcName, "mongo", false,
-                // create data connection that is correct enough to parse the query
-                ImmutableMap.of("connectionString", "bad:12345", "database", "db",
-                        "idColumn", "id")
-        );
+        createDataConnection(instance(), dcName, "Kafka", false, singletonMap("A", "B"));
 
         // then
         assertThatThrownBy(() -> sqlService.execute("select count(*) from " + mappingName).iterator().hasNext())
                 .as("Should detect change of data connection type")
                 .isInstanceOf(HazelcastSqlException.class)
-                .hasMessageContaining("Mongo connector allows only object types");
+                .hasMessageContaining("Missing 'valueFormat' option");
 
         // cleanup
         sqlService.executeUpdate("DROP MAPPING " + mappingName);
@@ -488,7 +488,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         );
     }
 
-    // Postgres + MySQL : Test that table in another DB exists
+    // Postgres + MySQL : Check if table that exists in another database is not accessible
     @Test
     public void createMappingFails_tableExistInAnotherDatabase_externalNameOnlyTableName() throws SQLException {
         assumeThat(databaseProvider)
@@ -502,12 +502,12 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         // Create table on first DB
         createTable(tableName);
 
+        // Create a new DB
         String newDBName = "db1";
         executeJdbc("CREATE DATABASE " + newDBName);
 
-        // Add a new DB
-        String newDbUrl = dbConnectionUrl.replace("com.hazelcast.jet.sql.impl.connector.jdbc.JdbcSqlTestSupport",
-                newDBName);
+        // Create new data connection
+        String newDbUrl = urlForDatabaseName(newDBName);
 
         Properties properties = new Properties();
         properties.setProperty("jdbcUrl", newDbUrl);
@@ -520,7 +520,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                         .setProperties(properties)
         );
 
-        // Create mapping to new DB. Table does not exist on new DB, and we should get an exception
+        // Create mapping to new DB using new data connection. Table does not exist on new DB, and we should get an exception
         assertThatThrownBy(() -> execute(
                 "CREATE MAPPING " + tableName + " EXTERNAL NAME " + tableName + " ("
                         + " id INT, "
@@ -533,7 +533,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                 .hasMessageContaining("Could not execute readDbFields for table");
     }
 
-    // Postgres : Test that table in another DB and explicit schema name exists
+    // Postgres : Check if table that exists in another database is not accessible
     @Test
     public void createMappingFails_tableExistInAnotherDatabase_externalNameFullName() throws SQLException {
         assumeThat(databaseProvider)
@@ -546,12 +546,12 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
         // Create table on first DB
         createTable(tableName);
 
+        // Create a new DB
         String newDBName = "db2";
         executeJdbc("CREATE DATABASE " + newDBName);
 
-        // Add a new DB
-        String newDbUrl = dbConnectionUrl.replace("com.hazelcast.jet.sql.impl.connector.jdbc.JdbcSqlTestSupport",
-                newDBName);
+        // Create new data connection
+        String newDbUrl = urlForDatabaseName(newDBName);
 
         Properties properties = new Properties();
         properties.setProperty("jdbcUrl", newDbUrl);
@@ -564,7 +564,7 @@ public class MappingJdbcSqlConnectorTest extends JdbcSqlTestSupport {
                         .setProperties(properties)
         );
 
-        // Create mapping to new DB. Table does not exist on new DB, and we should get an exception
+        // Create mapping to new DB using new data connection. Table does not exist on new DB, and we should get an exception
         assertThatThrownBy(() -> execute(
                 "CREATE MAPPING " + tableName + " EXTERNAL NAME " + newDBName + ".public." + tableName + " ("
                         + " id INT, "
