@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,7 @@
 
 package com.hazelcast.jet.sql.impl.connector.kafka;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import com.hazelcast.jet.kafka.impl.StreamKafkaP;
 import com.hazelcast.jet.sql.impl.connector.kafka.KafkaTable.KafkaPlanObjectKey;
 import com.hazelcast.sql.impl.schema.TableField;
 import com.hazelcast.sql.impl.type.QueryDataType;
@@ -26,9 +25,15 @@ import junitparams.Parameters;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import java.util.List;
+import java.util.Map;
+
+import static com.hazelcast.jet.sql.impl.connector.SqlConnector.OPTION_PREFERRED_LOCAL_PARALLELISM;
+import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
 import static java.util.Collections.singletonMap;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @RunWith(JUnitParamsRunner.class)
 public class KafkaTableTest {
@@ -57,8 +62,8 @@ public class KafkaTableTest {
                 schema1,
                 name1,
                 topic1,
-                ImmutableList.of(new TableField(field1, QueryDataType.INT, false)),
-                ImmutableMap.of("key", value1)
+                List.of(new TableField(field1, QueryDataType.INT, false)),
+                Map.of("key", value1)
         );
         KafkaPlanObjectKey k2 = new KafkaPlanObjectKey(
                 schema2,
@@ -70,5 +75,47 @@ public class KafkaTableTest {
 
         assertThat(k1.equals(k2)).isEqualTo(expected);
         assertThat(k1.hashCode() == k2.hashCode()).isEqualTo(expected);
+    }
+
+    @SuppressWarnings("unused")
+    private Object[] preferredLocalParallelisms() {
+        return new Object[]{
+            new Object[]{"-2", -2, false},
+            new Object[]{"-1", -1, false},
+            new Object[]{"0", 0, false},
+            new Object[]{"1", 1, false},
+            new Object[]{"2", 2, false},
+            new Object[]{"not-an-int", null, true},
+            new Object[]{"3.14159", null, true},
+        };
+    }
+
+    @Test
+    @Parameters(method = "preferredLocalParallelisms")
+    public void when_preferredLocalParallelism_isDefined_then_parseInt(String plp, Integer expected, boolean shouldThrow) {
+        KafkaTable table = new KafkaTable(
+                null, null, null, null, null, null, null,
+                Map.of(OPTION_PREFERRED_LOCAL_PARALLELISM, plp),
+                null, null, null, null, null
+        );
+
+        if (shouldThrow) {
+            assertThatThrownBy(() -> table.preferredLocalParallelism())
+                    .isInstanceOf(NumberFormatException.class);
+        } else {
+            assertThat(table.preferredLocalParallelism()).isEqualTo(expected);
+        }
+    }
+
+    @Test
+    public void when_preferredLocalParallelism_isNotDefined_then_useDefault() {
+        KafkaTable table = new KafkaTable(
+                null, null, null, null, null, null, null,
+                emptyMap(),
+                null, null, null, null, null
+        );
+
+        assertThat(table.preferredLocalParallelism())
+                .isEqualTo(StreamKafkaP.PREFERRED_LOCAL_PARALLELISM);
     }
 }
