@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package com.hazelcast.internal.util;
 
-import javax.annotation.Nullable;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -32,19 +31,10 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static java.lang.Character.isLetter;
-import static java.lang.Character.isLowerCase;
-import static java.lang.Character.toLowerCase;
-
 /**
  * Utility class for Strings.
  */
 public final class StringUtil {
-
-    /**
-     * Points to the System property 'line.separator'.
-     */
-    public static final String LINE_SEPARATOR = System.getProperty("line.separator");
 
     /**
      * LOCALE_INTERNAL is the default locale for string operations and number formatting. Initialized to
@@ -58,37 +48,7 @@ public final class StringUtil {
     public static final Pattern VERSION_PATTERN
             = Pattern.compile("^(\\d+)\\.(\\d+)(\\.(\\d+))?(-\\w+(?:-\\d+)?)?(-SNAPSHOT)?$");
 
-    /**
-     * Empty String.
-     */
-    public static final String EMPTY_STRING = "";
-
-    private static final String GETTER_PREFIX = "get";
-
     private StringUtil() {
-    }
-
-    /**
-     * Creates a UTF8_CHARSET string from a byte array.
-     *
-     * @param bytes  the byte array.
-     * @param offset the index of the first byte to decode
-     * @param length the number of bytes to decode
-     * @return the string created from the byte array.
-     */
-    public static String bytesToString(byte[] bytes, int offset, int length) {
-        return new String(bytes, offset, length, StandardCharsets.UTF_8);
-    }
-
-    /**
-     * Creates a UTF8_CHARSET string from a byte array.
-     *
-     * @param bytes the byte array.
-     * @return the string created from the byte array.
-     */
-    public static String bytesToString(byte[] bytes) {
-
-        return new String(bytes, StandardCharsets.UTF_8);
     }
 
     /**
@@ -125,7 +85,7 @@ public final class StringUtil {
         if (s == null) {
             return true;
         }
-        return s.trim().isEmpty();
+        return s.isBlank();
     }
 
     /**
@@ -164,27 +124,6 @@ public final class StringUtil {
             return s;
         }
         return s.toUpperCase(LOCALE_INTERNAL);
-    }
-
-    /**
-     * Converts the first character to lower case.
-     *
-     * Empty strings are ignored.
-     *
-     * @param s the given string
-     * @return the converted string.
-     */
-    public static String lowerCaseFirstChar(String s) {
-        if (s.isEmpty()) {
-            return s;
-        }
-
-        char first = s.charAt(0);
-        if (isLowerCase(first)) {
-            return s;
-        }
-
-        return toLowerCase(first) + s.substring(1);
     }
 
     /**
@@ -307,42 +246,11 @@ public final class StringUtil {
         }
     }
 
-    /**
-     * Convert getter into a property name
-     * Example: 'getFoo' is converted into 'foo'
-     *
-     * It's written defensively, when output is not a getter then it
-     * returns the original name.
-     *
-     * It only converts names starting with a get- prefix. When a getter
-     * starts with an is- prefix (=boolean) then it does not convert it.
-     *
-     * @param getterName
-     * @return property matching the given getter
-     */
-    public static String getterIntoProperty(String getterName) {
-        if (getterName == null) {
-            return getterName;
-        }
-        int length = getterName.length();
-        if (!getterName.startsWith(GETTER_PREFIX) || length <= GETTER_PREFIX.length()) {
-            return getterName;
-        }
-
-        String propertyName = getterName.substring(GETTER_PREFIX.length(), length);
-        char firstChar = propertyName.charAt(0);
-        if (isLetter(firstChar)) {
-            if (isLowerCase(firstChar)) {
-                //ok, apparently this is not a JavaBean getter, better leave it untouched
-                return getterName;
-            }
-            propertyName = toLowerCase(firstChar) + propertyName.substring(1, propertyName.length());
-        }
-        return propertyName;
-    }
 
     /**
-     * Trim whitespaces. This method (compared to {@link String#trim()}) doesn't limit to space character.
+     * Trim whitespaces using the more aggressive approach of {@link String#strip()}.
+     * This method removes leading and trailing whitespaces, including a broader set of Unicode whitespace characters,
+     * compared to {@link String#trim()}.
      *
      * @param input string to trim
      * @return {@code null} if provided value was {@code null}, input with removed leading and trailing whitespaces
@@ -351,7 +259,7 @@ public final class StringUtil {
         if (input == null) {
             return null;
         }
-        return input.replaceAll("^\\s+|\\s+$", "");
+        return input.strip();
     }
 
     /**
@@ -404,16 +312,13 @@ public final class StringUtil {
     }
 
     /**
-     * Returns true if two strings are equals ignoring the letter case in {@link #LOCALE_INTERNAL} locale.
-     *
      * @param str1 first string to compare
      * @param str2 second string to compare
-     * @return true if the strings are equals ignoring the case
+     * @return {@code true} if the two strings are equals ignoring the letter case in {@link #LOCALE_INTERNAL} locale.
      */
+    @SuppressWarnings("java:S4973")
     public static boolean equalsIgnoreCase(String str1, String str2) {
-        return (str1 == null || str2 == null)
-                ? false
-                : (str1 == str2 || lowerCaseInternal(str1).equals(lowerCaseInternal(str2)));
+        return (str1 != null && str2 != null) && (str1 == str2 || lowerCaseInternal(str1).equals(lowerCaseInternal(str2)));
     }
 
     /**
@@ -485,7 +390,7 @@ public final class StringUtil {
     public static <T> String toString(Collection<T> collection) {
         return collection.stream()
                 .map(Objects::toString)
-                .collect(Collectors.joining(LINE_SEPARATOR));
+                .collect(Collectors.joining(System.lineSeparator()));
     }
 
     /**
@@ -496,23 +401,7 @@ public final class StringUtil {
     public static <T> String toString(T[] arr) {
         return Arrays.stream(arr)
                 .map(Objects::toString)
-                .collect(Collectors.joining(LINE_SEPARATOR));
-    }
-
-    /**
-     * Formats given XML String with the given indentation used. If the {@code input} XML string is {@code null}, or
-     * {@code indent} parameter is negative, or XML transformation fails, then the original value is returned unchanged. The
-     * {@link IllegalArgumentException} is thrown when {@code indent==0}.
-     *
-     * @param input the XML String
-     * @param indent indentation (number of spaces used for one indentation level)
-     * @return formatted XML String or the original String if the formatting fails.
-     * @throws IllegalArgumentException when indentation is equal to zero
-     * @deprecated Use directly {@link XmlUtil#format(String, int)}
-     */
-    @Deprecated
-    public static String formatXml(@Nullable String input, int indent) throws IllegalArgumentException {
-        return XmlUtil.format(input, indent);
+                .collect(Collectors.joining(System.lineSeparator()));
     }
 
     /**
@@ -548,5 +437,9 @@ public final class StringUtil {
             }
         }
         return new String(chars, 0, pos);
+    }
+
+    public static boolean isBoolean(String value) {
+        return value.equalsIgnoreCase("false") || value.equalsIgnoreCase("true");
     }
 }
