@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,12 @@
 
 package com.hazelcast.client.impl.connection.tcp;
 
-import com.google.common.collect.ImmutableList;
 import com.hazelcast.client.HazelcastClient;
 import com.hazelcast.client.HazelcastClientUtil;
 import com.hazelcast.client.config.ClientConfig;
 import com.hazelcast.client.impl.connection.AddressProvider;
 import com.hazelcast.client.impl.connection.Addresses;
-import com.hazelcast.client.impl.management.ClientConnectionProcessListenerRunner;
+import com.hazelcast.client.impl.management.ClientConnectionProcessListenerRegistry;
 import com.hazelcast.client.properties.ClientProperty;
 import com.hazelcast.client.test.ClientTestSupport;
 import com.hazelcast.cluster.Address;
@@ -44,6 +43,7 @@ import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.net.UnknownHostException;
+import java.util.List;
 import java.util.UUID;
 
 import static junit.framework.TestCase.assertNotNull;
@@ -209,9 +209,9 @@ public class TcpClientConnectionManagerTranslateTest extends ClientTestSupport {
         }
 
         @Override
-        public Addresses loadAddresses(ClientConnectionProcessListenerRunner listenerRunner) {
+        public Addresses loadAddresses(ClientConnectionProcessListenerRegistry listenerRunner) {
             try {
-                return new Addresses(ImmutableList.of(new Address("127.0.0.1", 5701)));
+                return new Addresses(List.of(new Address("127.0.0.1", 5701)));
             } catch (UnknownHostException e) {
                 return null;
             }
