@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package com.hazelcast.dataconnection;
 
-import com.hazelcast.config.Config;
 import com.hazelcast.config.DataConnectionConfig;
 import com.hazelcast.core.Hazelcast;
 import com.hazelcast.core.HazelcastException;
@@ -33,14 +32,12 @@ import org.junit.runner.RunWith;
 
 import javax.annotation.Nonnull;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Locale;
 
-import static java.nio.file.Files.readAllBytes;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -56,7 +53,7 @@ public class HazelcastDataConnectionTest extends HazelcastTestSupport {
     @Before
     public void setUp() throws Exception {
         clusterName = randomName();
-        instance = Hazelcast.newHazelcastInstance(new Config().setClusterName(clusterName));
+        instance = Hazelcast.newHazelcastInstance(smallInstanceConfig().setClusterName(clusterName));
     }
 
     @After
@@ -102,11 +99,11 @@ public class HazelcastDataConnectionTest extends HazelcastTestSupport {
         assertThatThrownBy(() -> hazelcastDataConnection = new HazelcastDataConnection(dataConnectionConfig))
                 .isInstanceOf(HazelcastException.class)
                 .hasMessage("HazelcastDataConnection with name 'data-connection-name' "
-                            + "could not be created, "
-                            + "provide either a file path with one of "
-                            + "\"client_xml_path\" or \"client_yml_path\" properties "
-                            + "or a string content with one of \"client_xml\" or \"client_yml\" properties "
-                            + "for the client configuration.");
+                        + "could not be created, "
+                        + "provide either a file path with one of "
+                        + "\"client_xml_path\" or \"client_yml_path\" properties "
+                        + "or a string content with one of \"client_xml\" or \"client_yml\" properties "
+                        + "for the client configuration.");
     }
 
     @Test
@@ -218,8 +215,8 @@ public class HazelcastDataConnectionTest extends HazelcastTestSupport {
                 .setType("HZ")
                 .setShared(true);
         try {
-            byte[] bytes = readAllBytes(Paths.get("src", "test", "resources", "hazelcast-client-test-external.xml"));
-            String xmlString = new String(bytes, StandardCharsets.UTF_8).replace("$CLUSTER_NAME$", clusterName);
+            String str = readFile();
+            String xmlString = str.replace("$CLUSTER_NAME$", clusterName);
             dataConnectionConfig.setProperty(HazelcastDataConnection.CLIENT_XML, xmlString);
             return dataConnectionConfig;
         } catch (IOException e) {
@@ -233,8 +230,8 @@ public class HazelcastDataConnectionTest extends HazelcastTestSupport {
                 .setType("HZ")
                 .setShared(true);
         try {
-            byte[] bytes = readAllBytes(Paths.get("src", "test", "resources", "hazelcast-client-test-external.xml"));
-            String xmlString = new String(bytes, StandardCharsets.UTF_8)
+            String str = readFile();
+            String xmlString = str
                     .replace("$CLUSTER_NAME$", clusterName)
                     .replace("5701", Integer.toString(port));
             dataConnectionConfig.setProperty(HazelcastDataConnection.CLIENT_XML, xmlString);
@@ -250,15 +247,19 @@ public class HazelcastDataConnectionTest extends HazelcastTestSupport {
                 .setType(HazelcastDataConnection.class.getName())
                 .setShared(true);
         try {
-            byte[] bytes = readAllBytes(Paths.get("src", "test", "resources", "hazelcast-client-test-external.xml"));
-            String xmlString = new String(bytes, StandardCharsets.UTF_8).replace("$CLUSTER_NAME$", clusterName);
+            String str = readFile();
+            String xmlString = str.replace("$CLUSTER_NAME$", clusterName);
             Path tempFile = Files.createTempFile("test_client", ".xml");
-            Files.write(tempFile, xmlString.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(tempFile, xmlString);
             dataConnectionConfig.setProperty(HazelcastDataConnection.CLIENT_XML_PATH, tempFile.toString());
 
             return dataConnectionConfig;
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    private static String readFile() throws IOException {
+        return Files.readString(Paths.get("src", "test", "resources", "hazelcast-client-test-external.xml"));
     }
 }
