@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package com.hazelcast.jet.config;
 
 import com.hazelcast.jet.JetException;
 import com.hazelcast.jet.core.JetTestSupport;
+import com.hazelcast.jet.impl.util.ReflectionUtils;
 import com.hazelcast.test.HazelcastParallelClassRunner;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
@@ -31,6 +32,7 @@ import org.junit.runner.RunWith;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.Collection;
@@ -67,7 +69,7 @@ public class ResourceConfigTest extends JetTestSupport {
 
         // Then
         ResourceConfig resourceConfig = getFirstResourceConfig();
-        assertEquals(toId(this.getClass()), resourceConfig.getId());
+        assertEquals(ReflectionUtils.toClassResourceId(this.getClass()), resourceConfig.getId());
         assertEquals(ResourceType.CLASS, resourceConfig.getResourceType());
     }
 
@@ -81,7 +83,7 @@ public class ResourceConfigTest extends JetTestSupport {
         assertTrue(resourceConfigs
                 .stream()
                 .anyMatch(resourceConfig ->
-                        resourceConfig.getId().equals(toId(this.getClass())) &&
+                        resourceConfig.getId().equals(ReflectionUtils.toClassResourceId(this.getClass())) &&
                                 resourceConfig.getResourceType().equals(ResourceType.CLASS)
                 ));
         assertTrue(resourceConfigs
@@ -106,7 +108,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addJarWithUrl() throws Exception {
         // Given
         String resourceId = "jarfile";
-        URL url = new URL("http://site/path/to/" + resourceId);
+        URL url = URI.create("http://site/path/to/" + resourceId).toURL();
 
         // When
         config.addJar(url);
@@ -121,28 +123,22 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_addJarWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
-
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // When
-        config.addJar(url);
+        assertThrows(IllegalArgumentException.class, () -> config.addJar(url));
     }
 
     @Test
     public void when_addDuplicateJarWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "file";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addJar(url1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addJar(url2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJar(url2));
     }
 
     private ResourceConfig getFirstResourceConfig() {
@@ -173,11 +169,7 @@ public class ResourceConfigTest extends JetTestSupport {
         File file2 = createFile("path/to/another/" + resourceId);
         config.addJar(file1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
-        // When
-        config.addJar(file2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJar(file2));
     }
 
     @Test
@@ -219,11 +211,8 @@ public class ResourceConfigTest extends JetTestSupport {
         String path2 = createFile("path/to/another/" + resourceId).toString();
         config.addJar(path1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addJar(path2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJar(path2));
     }
 
     @Test
@@ -243,7 +232,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addZipOfJarWithUrl() throws Exception {
         // Given
         String resourceId = "zipFile";
-        URL url = new URL("http://path/to/" + resourceId);
+        URL url = URI.create("http://path/to/" + resourceId).toURL();
 
         // When
         config.addJarsInZip(url);
@@ -258,28 +247,22 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_addZipOfJarWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
-
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // When
-        config.addJarsInZip(url);
+        assertThrows(IllegalArgumentException.class, () -> config.addJarsInZip(url));
     }
 
     @Test
     public void when_addDuplicateZipOfJarWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "zipfile";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addJarsInZip(url1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addJarsInZip(url2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJarsInZip(url2));
     }
 
     @Test
@@ -307,11 +290,9 @@ public class ResourceConfigTest extends JetTestSupport {
         String path2 = createFile("path/to/another/" + resourceId).toString();
         config.addJarsInZip(path1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
 
         // When
-        config.addJarsInZip(path2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJarsInZip(path2));
     }
 
     @Test
@@ -351,11 +332,9 @@ public class ResourceConfigTest extends JetTestSupport {
         File file2 = createFile("path/to/another/" + resourceId);
         config.addJarsInZip(file1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
 
         // When
-        config.addJarsInZip(file2);
+        assertThrows(IllegalArgumentException.class, () -> config.addJarsInZip(file2));
     }
 
     @Test
@@ -397,11 +376,8 @@ public class ResourceConfigTest extends JetTestSupport {
         String path2 = createFile("path/to/another/" + resourceId).toString();
         config.addClasspathResource(path1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addClasspathResource(path2);
+        assertThrows(IllegalArgumentException.class, () -> config.addClasspathResource(path2));
     }
 
     @Test
@@ -472,11 +448,8 @@ public class ResourceConfigTest extends JetTestSupport {
         File file2 = createFile("path/to/another/" + resourceId);
         config.addClasspathResource(file1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addClasspathResource(file2);
+        assertThrows(IllegalArgumentException.class, () -> config.addClasspathResource(file2));
     }
 
     @Test
@@ -528,7 +501,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addResourceWithURL() throws Exception {
         // Given
         String resourceId = "my.txt";
-        URL url = new URL("http://site/" + resourceId);
+        URL url = URI.create("http://site/" + resourceId).toURL();
 
         // When
         config.addClasspathResource(url);
@@ -544,27 +517,21 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addDuplicateResourceWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "my.txt";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addClasspathResource(url1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.addClasspathResource(url2);
+        assertThrows(IllegalArgumentException.class, () -> config.addClasspathResource(url2));
     }
 
     @Test
     public void when_addResourceWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
-
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // When
-        config.addClasspathResource(url);
+        assertThrows(IllegalArgumentException.class, () -> config.addClasspathResource(url));
     }
 
     @Test
@@ -586,7 +553,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addResourceWithURLAndId() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url = new URL("http://site/my.txt");
+        URL url = URI.create("http://site/my.txt").toURL();
 
         // When
         config.addClasspathResource(url, resourceId);
@@ -602,7 +569,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_attachFileWithUrl() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url = new URL("http://site/" + resourceId);
+        URL url = URI.create("http://site/" + resourceId).toURL();
 
         // When
         config.attachFile(url);
@@ -618,27 +585,21 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_attachDuplicateFileWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.attachFile(url1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachFile(url2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachFile(url2));
     }
 
     @Test
     public void when_attachFileWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
-
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // When
-        config.attachFile(url);
+        assertThrows(IllegalArgumentException.class, () -> config.attachFile(url));
     }
 
     @Test
@@ -682,11 +643,8 @@ public class ResourceConfigTest extends JetTestSupport {
         String path2 = createFile("path/to/another/" + resourceId).toString();
         config.attachFile(path1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachFile(path2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachFile(path2));
     }
 
     @Test
@@ -757,11 +715,8 @@ public class ResourceConfigTest extends JetTestSupport {
         File file2 = createFile("path/to/another/" + resourceId);
         config.attachFile(file1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachFile(file2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachFile(file2));
     }
 
     @Test
@@ -848,11 +803,8 @@ public class ResourceConfigTest extends JetTestSupport {
         URL url2 = createDirectory("path/to/another/dir").toURI().toURL();
         config.attachDirectory(url1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachDirectory(url2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachDirectory(url2));
     }
 
     @Test
@@ -909,11 +861,8 @@ public class ResourceConfigTest extends JetTestSupport {
         String path2 = createDirectory("path/to/another/dir").toString();
         config.attachDirectory(path1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachDirectory(path2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachDirectory(path2));
     }
 
     @Test
@@ -984,11 +933,8 @@ public class ResourceConfigTest extends JetTestSupport {
         File dir2 = createDirectory("path/to/another/" + resourceId);
         config.attachDirectory(dir1);
 
-        // Then
-        expectedException.expect(IllegalArgumentException.class);
-
         // When
-        config.attachDirectory(dir2);
+        assertThrows(IllegalArgumentException.class, () -> config.attachDirectory(dir2));
     }
 
     @Test
@@ -1090,9 +1036,5 @@ public class ResourceConfigTest extends JetTestSupport {
         File dirFile = new File(baseDir, path);
         assertTrue("Failed to create directory " + dirFile, dirFile.mkdirs());
         return dirFile;
-    }
-
-    private static String toId(Class<?> clazz) {
-        return clazz.getName().replace('.', '/') + ".class";
     }
 }
