@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,6 +36,8 @@ import io.fabric8.kubernetes.api.model.PodBuilder;
 import io.fabric8.kubernetes.api.model.PodList;
 import io.fabric8.kubernetes.api.model.PodSpecBuilder;
 import io.fabric8.kubernetes.api.model.PodStatusBuilder;
+
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -43,7 +45,6 @@ import org.junit.rules.TemporaryFolder;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
@@ -73,7 +74,10 @@ import static com.hazelcast.kubernetes.KubernetesFakeUtils.podsListMultiplePorts
 import static com.hazelcast.kubernetes.KubernetesFakeUtils.service;
 import static com.hazelcast.kubernetes.KubernetesFakeUtils.serviceLb;
 import static com.hazelcast.kubernetes.KubernetesFakeUtils.serviceLbHost;
+import static com.hazelcast.kubernetes.KubernetesFakeUtils.serviceLbWithMultiplePorts;
+import static com.hazelcast.kubernetes.KubernetesFakeUtils.serviceLbWithoutAddr;
 import static com.hazelcast.kubernetes.KubernetesFakeUtils.servicePort;
+import static com.hazelcast.kubernetes.KubernetesFakeUtils.servicePortWithName;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonMap;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -85,7 +89,6 @@ import static org.junit.Assert.assertTrue;
 public class KubernetesClientTest {
     private static final String KUBERNETES_MASTER_IP = "localhost";
     private static final String TOKEN = "sample-token";
-    private static final String CA_CERTIFICATE = "sample-ca-certificate";
     private static final String NAMESPACE = "sample-namespace";
     private static final int RETRIES = 3;
     private static final ObjectWriter WRITER = new ObjectMapper().writer();
@@ -105,23 +108,31 @@ public class KubernetesClientTest {
                 .willReturn(aResponse().withStatus(401).withBody("\"reason\":\"Forbidden\"")));
     }
 
+    @After
+    public void cleanUpClient() {
+        if (kubernetesClient != null) {
+            kubernetesClient.destroy();
+        }
+    }
+
     @Test
     public void buildKubernetesApiUrlProviderReturnsEndpointProvider() {
         //language=JSON
-        String endpointSlicesResponse = "{\n"
-                + "  \"kind\": \"Status\",\n"
-                + "  \"apiVersion\": \"v1\",\n"
-                + "  \"metadata\": {\n"
-                + "    \n"
-                + "  },\n"
-                + "  \"status\": \"Failure\",\n"
-                + "  \"message\": \"the server could not find the requested resource\",\n"
-                + "  \"reason\":\"NotFound\",\n"
-                + "  \"details\": {\n"
-                + "    \n"
-                + "  },\n"
-                + "  \"code\": 404\n"
-                + "}";
+        String endpointSlicesResponse = """
+                {
+                  "kind": "Status",
+                  "apiVersion": "v1",
+                  "metadata": {
+                   \s
+                  },
+                  "status": "Failure",
+                  "message": "the server could not find the requested resource",
+                  "reason":"NotFound",
+                  "details": {
+                   \s
+                  },
+                  "code": 404
+                }""";
         stub(String.format("/apis/discovery.k8s.io/v1/namespaces/%s/endpointslices", NAMESPACE),
                 404, endpointSlicesResponse);
         assertThat(kubernetesClient.buildKubernetesApiUrlProvider()).isInstanceOf(KubernetesApiEndpointProvider.class);
@@ -163,7 +174,7 @@ public class KubernetesClientTest {
                 endpointsList(
                         endpoints("192.168.0.25", "hazelcast-1",
                                 endpointPort("some-port", 5701),
-                                endpointPort("hazelcast-service-port", 5702)),
+                                endpointPort("hazelcast", 5702)),
                         endpoints("172.17.0.5", "172.17.0.6", "hazelcast-1", 5701)
                 ));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
@@ -189,7 +200,7 @@ public class KubernetesClientTest {
                 endpointsList(
                         endpoints("192.168.0.25", "hazelcast-1",
                                 endpointPort("some-port", 5701),
-                                endpointPort("hazelcast-service-port", 5702)),
+                                endpointPort("hazelcast", 5702)),
                         endpoints("172.17.0.5", "172.17.0.6", "hazelcast-1", 5701)
                 ));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
@@ -274,15 +285,16 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "us-central1",
+                      "failure-domain.beta.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -299,17 +311,18 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"deprecated-region\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"deprecated-zone\",\n"
-                + "      \"failure-domain.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"failure-domain.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "deprecated-region",
+                      "failure-domain.beta.kubernetes.io/zone": "deprecated-zone",
+                      "failure-domain.kubernetes.io/region": "us-central1",
+                      "failure-domain.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -340,17 +353,18 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"deprecated-region\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"deprecated-zone\",\n"
-                + "      \"topology.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"topology.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "deprecated-region",
+                      "failure-domain.beta.kubernetes.io/zone": "deprecated-zone",
+                      "topology.kubernetes.io/region": "us-central1",
+                      "topology.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -368,7 +382,7 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
                 serviceLb(servicePort(32123, 5701, 31916), "35.232.226.200"));
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
-                serviceLb(servicePort(32124, 5701, 31916), "35.232.226.201"));
+                serviceLb(servicePort(32124, 5701, 31917), "35.232.226.201"));
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
@@ -392,7 +406,6 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
 
-
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
 
@@ -410,7 +423,7 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE), service(servicePort(32123, 5701, 31916)));
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE), service(servicePort(32124, 5701, 31917)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
                 pod("hazelcast-0", NAMESPACE, "node-name-1", 5701));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
@@ -422,6 +435,39 @@ public class KubernetesClientTest {
         // then
         assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
         assertThat(formatPublic(result)).containsExactlyInAnyOrder(ready("35.232.226.200", 31916), ready("35.232.226.201", 31917));
+        assertFalse(kubernetesClient.isNodePortWarningAlreadyLogged());
+    }
+
+    @Test
+    public void endpointsByNamespaceWithNodePortPublicIpPrintWarningLog() throws JsonProcessingException {
+        // given
+        kubernetesClient = newKubernetesClient(ExposeExternallyMode.ENABLED, false, null, null);
+
+        stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/endpoints", NAMESPACE), endpointsListResponse());
+
+        stub(String.format("/api/v1/namespaces/%s/services/service-0", NAMESPACE),
+                service(servicePort(0, 1, 2)));
+        stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
+                service(servicePort(0, 1, 2)));
+        stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
+                service(servicePort(0, 1, 2)));
+
+        stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
+                pod("hazelcast-0", NAMESPACE, "node-name-1", 5701));
+        stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
+                pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
+
+        stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
+
+        // when
+        List<Endpoint> result = kubernetesClient.endpoints();
+
+        // then
+        assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
+        assertThat(formatPublic(result)).containsExactlyInAnyOrder(ready("35.232.226.200", 2), ready("35.232.226.201", 2));
+        assertTrue(kubernetesClient.isNodePortWarningAlreadyLogged());
     }
 
     @Test
@@ -436,12 +482,11 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
                 service(servicePort(32124, 5701, 31917)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
                 pod("hazelcast-0", NAMESPACE, "node-name-1", 5701));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
-
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
@@ -456,6 +501,7 @@ public class KubernetesClientTest {
         // given
         String servicePerPodLabel = "sample-service-per-pod-service-label";
         String servicePerPodLabelValue = "sample-service-per-pod-service-label-value";
+        cleanUpClient();
         kubernetesClient = newKubernetesClient(false, servicePerPodLabel, servicePerPodLabelValue);
 
         stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
@@ -465,12 +511,11 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE), service(servicePort(32123, 5701, 31916)));
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE), service(servicePort(32124, 5701, 31917)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
                 pod("hazelcast-0", NAMESPACE, "node-name-1", 5701));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
-
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
@@ -484,6 +529,7 @@ public class KubernetesClientTest {
     public void endpointsByNamespaceWithNodeName() throws JsonProcessingException {
         // given
         // create KubernetesClient with useNodeNameAsExternalAddress=true
+        cleanUpClient();
         kubernetesClient = newKubernetesClient(true);
 
         stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
@@ -496,7 +542,6 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-1", 5701));
 
-
         String forbiddenBody = "\"reason\":\"Forbidden\"";
         stub("/api/v1/nodes/node-name-1", 403, forbiddenBody);
         stub("/api/v1/nodes/node-name-2", 403, forbiddenBody);
@@ -507,6 +552,28 @@ public class KubernetesClientTest {
         // then
         assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
         assertThat(formatPublic(result)).containsExactlyInAnyOrder(ready("node-name-1", 31916), ready("node-name-2", 31917));
+    }
+
+    @Test
+    public void endpointsByNamespaceWithPublicIpExposingMultiplePorts()throws JsonProcessingException {
+        // given
+        stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/endpoints", NAMESPACE), endpointsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
+                serviceLbWithMultiplePorts("hazelcast-0", List.of(
+                        servicePortWithName("hazelcast", 5701, 5701, 31916),
+                        servicePortWithName("wan-port", 5710, 5710, 31926)), "35.232.226.200"));
+        stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
+                serviceLbWithMultiplePorts("service-1", List.of(
+                        servicePortWithName("hazelcast", 5701, 5701, 31917),
+                        servicePortWithName("wan-port", 5701, 5701, 31916)), "35.232.226.201"));
+
+        // when
+        List<Endpoint> result = kubernetesClient.endpoints();
+
+        // then
+        assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
+        assertThat(formatPublic(result)).containsExactlyInAnyOrder(ready("35.232.226.200", 5701), ready("35.232.226.201", 5701));
     }
 
     @Test
@@ -522,18 +589,41 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
                 service(servicePort(0, 0, 0), servicePort(1, 1, 2)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
 
         // then
         assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
+        assertTrue(kubernetesClient.isNoPublicIpAlreadyLogged());
+    }
+
+    @Test
+    public void endpointsIgnoreLbServiceHasNoPublicAddress() throws JsonProcessingException {
+        // given
+        stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/endpoints", NAMESPACE), endpointsListResponse());
+
+        stub(String.format("/api/v1/namespaces/%s/services/service-0", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+        stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+        stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+
+        // when
+        List<Endpoint> result = kubernetesClient.endpoints();
+
+        // then
+        assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("192.168.0.25", 5701), ready("172.17.0.5", 5702));
+        assertTrue(kubernetesClient.isNoPublicIpAlreadyLogged());
     }
 
     @Test(expected = KubernetesClientException.class)
     public void endpointsFailFastWhenNoPublicAccess() throws JsonProcessingException {
         // given
+        cleanUpClient();
         kubernetesClient = newKubernetesClient(ExposeExternallyMode.ENABLED, false, null, null);
 
         stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
@@ -546,7 +636,52 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
                 service(servicePort(0, 0, 0), servicePort(1, 1, 2)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
+
+        // when
+        List<Endpoint> result = kubernetesClient.endpoints();
+
+        // then
+        // exception
+    }
+
+    @Test(expected = KubernetesClientException.class)
+    public void endpointsFailFastWhenLbServiceHasNoPublicAddress() throws JsonProcessingException {
+        // given
+        kubernetesClient = newKubernetesClient(ExposeExternallyMode.ENABLED, false, null, null);
+
+        stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/endpoints", NAMESPACE), endpointsListResponse());
+
+        stub(String.format("/api/v1/namespaces/%s/services/service-0", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+        stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+        stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
+                serviceLbWithoutAddr(servicePort(0, 0, 0)));
+
+        // when
+        List<Endpoint> result = kubernetesClient.endpoints();
+
+        // then
+        // exception
+    }
+
+    @Test(expected = KubernetesClientException.class)
+    public void endpointsFailFastWhenLbServiceHasNoHazelcastPort() throws JsonProcessingException {
+        // given
+        kubernetesClient = newKubernetesClient(ExposeExternallyMode.ENABLED, false, null, null);
+
+        stub(String.format("/api/v1/namespaces/%s/pods", NAMESPACE), podsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/endpoints", NAMESPACE), endpointsListResponse());
+        stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE),
+                serviceLbWithMultiplePorts("hazelcast-0", List.of(
+                        servicePortWithName("hz-port", 5701, 5701, 31916),
+                        servicePortWithName("wan-port", 5710, 5710, 31926)), "35.232.226.200"));
+        stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE),
+                serviceLbWithMultiplePorts("service-1", List.of(
+                        servicePortWithName("hz-port", 5701, 5701, 31917),
+                        servicePortWithName("wan-port", 5701, 5701, 31916)), "35.232.226.201"));
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
@@ -559,7 +694,7 @@ public class KubernetesClientTest {
     public void apiAccessWithTokenRefresh() throws IOException {
         // Token is read from the file, first token value is value-1
         File file = testFolder.newFile("token");
-        Files.write(file.toPath(), "value-1".getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+        Files.writeString(file.toPath(), "value-1", StandardOpenOption.TRUNCATE_EXISTING);
 
         stubFor(get(urlMatching("/apis/.*")).atPriority(1)
                 .withHeader("Authorization", equalTo("Bearer value-1"))
@@ -574,12 +709,13 @@ public class KubernetesClientTest {
                 .withHeader("Authorization", equalTo("Bearer value-2"))
                 .willReturn(aResponse().withStatus(402).withBody("{}")));
 
-        KubernetesClient client = newKubernetesClient(new FileReaderTokenProvider(file.toString()));
-        client.endpoints();
-        assertFalse(client.isKnownExceptionAlreadyLogged());
+        cleanUpClient();
+        kubernetesClient = newKubernetesClient(new FileReaderTokenProvider(file.toString()));
+        kubernetesClient.endpoints();
+        assertFalse(kubernetesClient.isKnownExceptionAlreadyLogged());
 
         // Token is rotated
-        Files.write(file.toPath(), "value-2".getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+        Files.writeString(file.toPath(), "value-2", StandardOpenOption.TRUNCATE_EXISTING);
 
         // Api server will not accept token with old value
         stubFor(get(urlMatching("/apis/.*")).atPriority(1)
@@ -595,8 +731,8 @@ public class KubernetesClientTest {
                 .withHeader("Authorization", equalTo("Bearer value-2"))
                 .willReturn(aResponse().withStatus(200).withBody("{}")));
 
-        client.endpoints();
-        assertFalse(client.isKnownExceptionAlreadyLogged());
+        kubernetesClient.endpoints();
+        assertFalse(kubernetesClient.isKnownExceptionAlreadyLogged());
     }
 
     @Test
@@ -656,7 +792,7 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
 
         List<Endpoint> result = kubernetesClient.endpoints();
 
@@ -669,6 +805,7 @@ public class KubernetesClientTest {
         // given
         String servicePerPodLabel = "hazelcast.com/service-per-pod";
         String servicePerPodLabelValue = "true";
+        cleanUpClient();
         kubernetesClient = newKubernetesClient(false, servicePerPodLabel, servicePerPodLabelValue);
 
         String serviceName = "service-name";
@@ -683,12 +820,11 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/services/hazelcast-0", NAMESPACE), service(servicePort(32123, 5701, 31916)));
         stub(String.format("/api/v1/namespaces/%s/services/service-1", NAMESPACE), service(servicePort(32124, 5701, 31917)));
         stub("/api/v1/nodes/node-name-1", node("node-name-1", "10.240.0.21", "35.232.226.200"));
-        stub("/api/v1/nodes/node-name-2", node("node-name-1", "10.240.0.22", "35.232.226.201"));
+        stub("/api/v1/nodes/node-name-2", node("node-name-2", "10.240.0.22", "35.232.226.201"));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-0", NAMESPACE),
                 pod("hazelcast-0", NAMESPACE, "node-name-1", 5701));
         stub(String.format("/api/v1/namespaces/%s/pods/hazelcast-1", NAMESPACE),
                 pod("hazelcast-1", NAMESPACE, "node-name-2", 5701));
-
 
         // when
         List<Endpoint> result = kubernetesClient.endpoints();
@@ -739,7 +875,7 @@ public class KubernetesClientTest {
         assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("172.17.0.5", 5701), ready("172.17.1.5", 5701));
     }
 
-    private static PodList podsListResponse() throws JsonProcessingException {
+    private static PodList podsListResponse() {
         return podsList(
                 Arrays.asList(new KubernetesClient.EndpointAddress("192.168.0.25", 5701),
                         new KubernetesClient.EndpointAddress("172.17.0.5", 5702)));
@@ -747,17 +883,17 @@ public class KubernetesClientTest {
 
     private static EndpointsList endpointsListResponse() {
         return endpointsList(
-                endpoints("my-release-hazelcast", new HashMap<String, String>() {{
+                endpoints("my-release-hazelcast", new HashMap<>() {{
                     put("192.168.0.25", "node-name-1");
                     put("172.17.0.5", "node-name-2");
                 }}),
-                endpoints("service-0", new HashMap<String, String>() {{
+                endpoints("service-0", new HashMap<>() {{
                     put("192.168.0.25", "node-name-1");
                 }}),
-                endpoints("hazelcast-0", new HashMap<String, String>() {{
+                endpoints("hazelcast-0", new HashMap<>() {{
                     put("192.168.0.25", "node-name-1");
                 }}),
-                endpoints("service-1", new HashMap<String, String>() {{
+                endpoints("service-1", new HashMap<>() {{
                     put("172.17.0.5", "node-name-2");
                 }}, Collections.singletonList(5702))
         );
@@ -765,17 +901,17 @@ public class KubernetesClientTest {
 
     private static String endpointsListResponseWithoutNodeName() throws JsonProcessingException {
         return WRITER.writeValueAsString(endpointsList(
-                endpoints("my-release-hazelcast", new HashMap<String, String>() {{
+                endpoints("my-release-hazelcast", new HashMap<>() {{
                     put("172.17.0.5", null);
                     put("192.168.0.25", null);
                 }}),
-                endpoints("service-0", new HashMap<String, String>() {{
+                endpoints("service-0", new HashMap<>() {{
                     put("192.168.0.25", null);
                 }}),
-                endpoints("hazelcast-0", new HashMap<String, String>() {{
+                endpoints("hazelcast-0", new HashMap<>() {{
                     put("192.168.0.25", null);
                 }}),
-                endpoints("service-1", new HashMap<String, String>() {{
+                endpoints("service-1", new HashMap<>() {{
                     put("172.17.0.5", null);
                 }}, Collections.singletonList(5702))
         ));
@@ -787,25 +923,32 @@ public class KubernetesClientTest {
 
     private KubernetesClient newKubernetesClient(KubernetesTokenProvider tokenProvider) {
         String kubernetesMasterUrl = String.format("http://%s:%d", KUBERNETES_MASTER_IP, wireMockRule.port());
-        return new KubernetesClient(NAMESPACE, kubernetesMasterUrl, tokenProvider, CA_CERTIFICATE, RETRIES,
-                ExposeExternallyMode.AUTO, true, null, null, (ClusterTopologyIntentTracker) null);
+        return new KubernetesClient(NAMESPACE, kubernetesMasterUrl, tokenProvider, null, RETRIES,
+                ExposeExternallyMode.AUTO, true, null, null,
+                (ClusterTopologyIntentTracker) null);
     }
 
     private KubernetesClient newKubernetesClient(boolean useNodeNameAsExternalAddress) {
         return newKubernetesClient(useNodeNameAsExternalAddress, null, null);
     }
 
-    private KubernetesClient newKubernetesClient(boolean useNodeNameAsExternalAddress, String servicePerPodLabelName, String servicePerPodLabelValue) {
-        return newKubernetesClient(ExposeExternallyMode.AUTO, useNodeNameAsExternalAddress, servicePerPodLabelName, servicePerPodLabelValue);
+    private KubernetesClient newKubernetesClient(boolean useNodeNameAsExternalAddress, String servicePerPodLabelName,
+                                                 String servicePerPodLabelValue) {
+        return newKubernetesClient(ExposeExternallyMode.AUTO, useNodeNameAsExternalAddress, servicePerPodLabelName,
+                servicePerPodLabelValue);
     }
 
-    private KubernetesClient newKubernetesClient(ExposeExternallyMode exposeExternally, boolean useNodeNameAsExternalAddress, String servicePerPodLabelName, String servicePerPodLabelValue) {
-        return newKubernetesClient(exposeExternally, useNodeNameAsExternalAddress, servicePerPodLabelName, servicePerPodLabelValue, new KubernetesApiEndpointProvider());
+    private KubernetesClient newKubernetesClient(ExposeExternallyMode exposeExternally, boolean useNodeNameAsExternalAddress,
+                                                 String servicePerPodLabelName, String servicePerPodLabelValue) {
+        return newKubernetesClient(exposeExternally, useNodeNameAsExternalAddress, servicePerPodLabelName,
+                servicePerPodLabelValue, new KubernetesApiEndpointProvider());
     }
-
-    private KubernetesClient newKubernetesClient(ExposeExternallyMode exposeExternally, boolean useNodeNameAsExternalAddress, String servicePerPodLabelName, String servicePerPodLabelValue, KubernetesApiProvider urlProvider) {
+    private KubernetesClient newKubernetesClient(ExposeExternallyMode exposeExternally, boolean useNodeNameAsExternalAddress,
+                                                 String servicePerPodLabelName, String servicePerPodLabelValue,
+                                                 KubernetesApiProvider urlProvider) {
         String kubernetesMasterUrl = String.format("http://%s:%d", KUBERNETES_MASTER_IP, wireMockRule.port());
-        return new KubernetesClient(NAMESPACE, kubernetesMasterUrl, new StaticTokenProvider(TOKEN), CA_CERTIFICATE, RETRIES, exposeExternally, useNodeNameAsExternalAddress, servicePerPodLabelName, servicePerPodLabelValue, urlProvider);
+        return new KubernetesClient(NAMESPACE, kubernetesMasterUrl, new StaticTokenProvider(TOKEN), null, RETRIES,
+                exposeExternally, useNodeNameAsExternalAddress, servicePerPodLabelName, servicePerPodLabelValue, urlProvider);
     }
 
     private static List<String> formatPrivate(List<Endpoint> addresses) {
